<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:contentDescription="@string/image"
        app:srcCompat="@drawable/error"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/loading_error"/>

    <Button
        android:id="@+id/try_again"
        android:layout_width="64dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn_try_again"
        android:text="@string/try_again"
        android:textColor="@color/blue1"/>

</LinearLayout>