<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@android:color/background_light"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/search"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/search"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/news_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/side_menu_item_margin"
                android:layout_marginStart="@dimen/side_menu_item_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/bg_side_menu_icon"
                    android:contentDescription="@string/image"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/news"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/news_category"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>

                <ImageView
                    android:id="@+id/arrow"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/bg_news_list_select"
                    android:contentDescription="@string/image"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/news_category_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/columns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/side_menu_item_margin"
                android:layout_marginStart="@dimen/side_menu_item_margin"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:background="@drawable/bg_side_menu_icon"
                    android:contentDescription="@string/image"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/columns"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/column_center"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>