<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12sp"
            android:layout_weight="1"
            android:background="@color/gray_search"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/search"/>

            <EditText
                android:id="@+id/search_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/search"
                android:inputType="text"
                android:textCursorDrawable="@null"
                tools:ignore="NestedWeights"/>

            <ImageView
                android:id="@+id/close"
                android:layout_width="12dp"
                android:layout_height="12sp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/image"
                android:visibility="gone"
                app:srcCompat="@drawable/close"/>
        </LinearLayout>

        <TextView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="12dp"
            android:text="@string/search_cancel"
            android:textSize="15sp"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/search_fragment"
            android:name="com.ls.qdaliy.ui.SearchFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_search"/>

        <fragment
            android:id="@+id/result_fragment"
            android:name="com.ls.qdaliy.ui.ResultFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_result"/>
    </FrameLayout>

</LinearLayout>